--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-wxlogin": "^1.0.4",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
