--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "eslint": "^8.25.0",
+    "eslint-plugin-vue": "^9.6.0",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
